--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,48 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
+# Dependencies
+node_modules/
+.pnp
 .pnp.js
 
-# testing
-/coverage
+# Testing
+coverage/
+*.lcov
+.nyc_output
 
-# next.js
-/.next/
-/out/
+# Production
+dist/
+build/
+.next/
+out/
 
-# production
-/build
+# Environment variables
+.env
+.env.local
+.env.*.local
 
-# misc
+# Database
+*.db
+*.db-journal
+prisma/migrations/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
 .DS_Store
-*.pem
+Thumbs.db
 
-# debug
+# Logs
+logs/
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
-.env*.local
-.env
-
-# vercel
-.vercel
-
-# typescript
+# Misc
+.cache/
 *.tsbuildinfo
-next-env.d.ts
+.turbo/
