--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,11 +43,6 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
-      
-      - name: Image built successfully
-        run: |
-          echo "✅ Backend Docker image built and pushed successfully!"
-          echo "📦 Image tags: ${{ steps.meta.outputs.tags }}"
 
   build-and-push-frontend:
     name: Build & Push Frontend
@@ -86,11 +81,6 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
-      
-      - name: Image built successfully
-        run: |
-          echo "✅ Frontend Docker image built and pushed successfully!"
-          echo "📦 Image tags: ${{ steps.meta.outputs.tags }}"
 
   deploy-notification:
     name: Deployment Summary
@@ -101,13 +91,5 @@ jobs:
       - name: Deployment complete
         run: |
           echo "🎉 Deployment completed successfully!"
-          echo ""
-          echo "📦 Docker images have been built and pushed to Docker Hub"
-          echo "🔗 Backend: https://hub.docker.com/r/${{ secrets.DOCKERHUB_USERNAME }}/calendar-booking-api"
-          echo "🔗 Frontend: https://hub.docker.com/r/${{ secrets.DOCKERHUB_USERNAME }}/calendar-booking-web"
-          echo ""
-          echo "🚀 Pull commands:"
-          echo "   docker pull ${{ secrets.DOCKERHUB_USERNAME }}/calendar-booking-api:latest"
-          echo "   docker pull ${{ secrets.DOCKERHUB_USERNAME }}/calendar-booking-web:latest"
-          echo ""
-          echo "💡 To deploy, use docker-compose.prod.yml with these images"
+          echo "📦 Docker images pushed to Docker Hub"
+          echo "🔗 https://hub.docker.com/u/${{ secrets.DOCKERHUB_USERNAME }}"
