--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -1,41 +1,26 @@
-# Build stage
 FROM node:18-alpine AS builder
-
 WORKDIR /app
-
-# Copy package files
 COPY package*.json ./
 COPY apps/web/package*.json ./apps/web/
 COPY packages/shared/package*.json ./packages/shared/
-
-# Install dependencies
 RUN npm install
-
-# Copy source
 COPY apps/web ./apps/web
 COPY packages/shared ./packages/shared
-
-# Build shared package
 WORKDIR /app/packages/shared
 RUN npm run build
-
-# Build web
 WORKDIR /app/apps/web
 RUN npm run build
 
-# Production stage
 FROM node:18-alpine
-
 WORKDIR /app
+COPY --from=builder /app/apps/web/.next ./apps/web/.next
+COPY --from=builder /app/apps/web/package*.json ./apps/web/
+COPY --from=builder /app/node_modules ./node_modules
+COPY --from=builder /app/packages/shared/dist ./packages/shared/dist
+COPY --from=builder /app/packages/shared/package*.json ./packages/shared/
 
-# Copy built files
-COPY --from=builder /app/apps/web/.next/standalone ./
-COPY --from=builder /app/apps/web/.next/static ./.next/static
-COPY --from=builder /app/apps/web/public ./public
-
+WORKDIR /app/apps/web
 ENV NODE_ENV=production
 ENV PORT=3000
-
 EXPOSE 3000
-
-CMD ["node", "server.js"]
+CMD ["npx", "next", "start"]
