feat: enhance UI/UX with modern components and fix authentication flow
- Add modal dialog for booking creation with validation
- Implement rich card layout for booking list with status chips
- Add FAB (Floating Action Button) for better UX
- Improve calendar status display with connection indicators
- Add loading states and success/error feedback with snackbars
- Fix authentication flow: remove hardcoded login, add dedicated login page
- Implement proper logout functionality with redirect
- Add user avatar with menu in app bar
- Display active bookings counter in header
- Add refresh functionality to booking list
- Fix TypeScript prop errors in BookingForm and BookingList
- Improve empty state with centered calendar icon
- Add delete confirmation dialog with booking details
- Implement duration calculator in booking form
- Add minimum time validation (15 minutes, 1 hour ahead)
- Style improvements: Material-UI components, transitions, hover effects

BREAKING CHANGES:
- Users now required to login with email and name
- Previous sessions will be cleared on first load

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "concurrently \"npm run dev:api\" \"npm run dev:web\"",
     "dev:api": "cd apps/api && npm run start:dev",
     "dev:web": "cd apps/web && npm run dev",
-    "db:reset": "pkill -f 'nest start' || true && cd apps/api && rm -f prisma/*.db* && rm -rf prisma/migrations && npx prisma migrate dev --name init && cd ../.. && echo '\n✅ Database reset complete!'",
+    "db:reset": "pkill -f 'nest start' || true && cd apps/api && rm -f prisma/*.db* && rm -rf prisma/migrations && rm -rf node_modules/.prisma && rm -rf node_modules/@prisma && npm install @prisma/client prisma && npx prisma generate && npx prisma migrate dev --name init && cd ../.. && echo '\n✅ Database reset complete! Run: npm run dev'",
     "build": "npm run build:shared && npm run build:api && npm run build:web",
     "build:shared": "cd packages/shared && npm run build",
     "build:api": "cd apps/api && npm run build",
